--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,32 @@ p {
 .cardContainer p {
     font-size: .8rem;
 }
+.hoverImage:hover .hoverElement {
+    display: block !important ;
+}
+.bookingForm {
+    display: flex;
+    justify-content: center;
+    transform: translate(0,-50%);
+}
+.bookingForm form {
+    display: flex;
+    gap: 1rem;
+    padding: 4rem 3rem ;
+    background-color: white;
+}
+.bookingForm select {
+    width: 165px;
+    border: none;
+    border-bottom: 1px solid black;
+    padding-bottom: 5px;
+}
+.arrow {
+    background: #f31131;
+    width: 28px;
+    height: 28px;
+    border-radius: 50%;
+}
 @media (max-width:576px) {
     .ps-custom {
         padding-left: 0;
@@ -67,6 +93,17 @@ p {
     }
 }
 @media (max-width:992px) {
+    .bookingForm {
+        position:static !important;
+        transform: translate(0,0) !important;
+    }
+    .bookingForm form {
+       flex-direction: column;
+       gap: 2rem;
+       margin-top: 4rem;
+       align-items: center;
+       padding:2rem 3rem;
+    }
     .footer a ,.footer .address p{
         font-size: 1rem;
     }
